# betaSharesScraping

./: main.py  output.html  pyproject.toml  requirements.txt
